--- a/Chart.html
+++ b/Chart.html
@@ -61,39 +61,142 @@
         x: reviews,
         y: price,
         mode: 'markers',
-        type: 'scatter'
+        type: 'scatter',
+          marker: {
+            color: '#FD6A02'
+          }
     }];
 
     var layout = {
-        height: 400,
-        width: 1400
-    };
+        height: 700,
+        width: 1400,
+        title: {
+          text: 'Review by Price',
+          font: {
+            family: 'Garamond',
+            size: 24,
+          },
+          xref: 'paper',
+          x: 0.05
+        },
+        xaxis: {
+    title: 'Reviews',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+  },
+  yaxis: {
+    title: 'Price',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+    },
+  }
 
     var data2 = [{
         x: rent,
-        type: 'histogram'
+        type: 'histogram',
+          marker: {
+            color: '#98FB98 '
+          }
     }];
+
+    var layout2 = {
+        height: 700,
+        width: 1400,
+        title: {
+          text: 'Rent Price by Airbnb',
+          font: {
+            family: 'Garamond',
+            size: 24,
+          },
+          xref: 'paper',
+          x: 0.05
+        },
+        xaxis: {
+    title: 'Rent Price',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+  },
+  yaxis: {
+    title: 'Amount of AirBnbs',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+    },
+  }
+
 
     var data3 = [{
         x: accommodates,
-        type: 'histogram'
+        type: 'histogram',
+          marker: {
+            color: 'pink',
+          }
     }];
+
+    var layout3 = {
+        height: 700,
+        width: 1400,
+        title: {
+          text: 'Guests by Hosts',
+          font: {
+            family: 'Garamond',
+            size: 24,
+          },
+          xref: 'paper',
+          x: 0.05
+        },
+        xaxis: {
+    title: 'Guests',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+  },
+  yaxis: {
+    title: 'Hosts',
+    titlefont: {
+      family: 'Courier New, monospace',
+      size: 18,
+      color: '#7f7f7f'
+    }
+    },
+  }
+    
 
     var data4 = [{
         values: roomTypePercentage,
         labels: ['Entire home/apt', 'Private room', 'Shared room'],
         type: 'pie'
     }];
-    var layout1 = {
+    var layout4 = {
         height: 800,
-        width: 1000
-    };
+        width: 1000,
+        title: {
+          text: 'Percentage by Room Type',
+          font: {
+            family: 'Garamond',
+            size: 24,
+          },
+      },
+    }
 
 
     Plotly.newPlot('myDiv', data, layout);
-    Plotly.newPlot('myDiv2', data2, layout);
-    Plotly.newPlot('myDiv3', data3, layout);
-    Plotly.newPlot('myDiv4', data4, layout1);
+    Plotly.newPlot('myDiv2', data2, layout2);
+    Plotly.newPlot('myDiv3', data3, layout3);
+    Plotly.newPlot('myDiv4', data4, layout4);
 
 </script>
 
