--- a/Chart.html
+++ b/Chart.html
@@ -22,7 +22,7 @@
         <!-- Plotly chart will be drawn inside this DIV -->
     </div>
 </body>
-<script src="InlamningsUppgift2.js"></script>
+<script src="Charts.js"></script>
 <script>
     var price = [];
     var reviews = [];
